--- a/src/components/BrandLink.astro
+++ b/src/components/BrandLink.astro
@@ -9,7 +9,7 @@ export interface Props {
 const { class: className, name: brandName, url, linkClass = "link-primary" } = Astro.props;
 ---
 
-<a class="d-flex flex-column text-center pb-4 pt-4 text-decoration-none" class:list={linkClass} href={url}>
+<a class="d-flex flex-column text-center pt-4 text-decoration-none" class:list={linkClass} href={url}>
     <i class:list={className} class="fa-brands fa-2xl"></i>
     <span class="mt-3">{brandName}</span>
 </a>
