--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -28,7 +28,7 @@ const { title } = Astro.props;
 		main {
 			margin: auto;
 			padding: 1.5rem;
-			max-width: 60ch;
+			max-width: 90%;
 		}
 		h1 {
 			font-size: 3rem;
