--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,7 +3,7 @@
     <div class="d-flex justify-content-center text-white pb-2">
         <a href="/" class="link-light d-flex justify-content-center">
             <div class="d-flex flex-column justify-content-center pe-2">
-                <h2>DREDGE MODS</h2>
+                <h2>Dredge Mods</h2>
             </div>
         </a>
     </div>
