--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -29,6 +29,7 @@ const { title } = Astro.props;
 			margin: auto;
 			padding: 1.5rem;
 			max-width: 90%;
+			min-width: 90%
 		}
 		h1 {
 			font-size: 3rem;
