--- a/src/components/Title.astro
+++ b/src/components/Title.astro
@@ -7,7 +7,10 @@ const { title: title } = Astro.props;
 ---
 
 <div class="d-flex flex-row items-center">
-    <hr class="flex-1 mb-4 me-2 flex-fill items-center border-dark border-solid">
-    <h3 class="text-center">{title}</h3>
-    <hr class="flex-1 mb-4 ms-2 flex-fill items-center border-dark">
+    <hr class="flex-1 mb-4 flex-fill items-center border-dark border-solid">
+    {title && 
+        <h3 class="me-2 ms-2 text-center">{title}</h3>
+    }
+
+    <hr class="flex-1 mb-4 flex-fill items-center border-dark">
 </div>
