--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -43,10 +43,13 @@ const { title } = Astro.props;
 			background-size: 400%;
 			background-position: 0%;
 		}
+		img {
+			max-width: 100%;
+		}
 	</style>
 	<body class="bg-secondary d-flex flex-column min-vh-100">
 
-		<div class="text-dark d-flex flex-column justify-content-center m-auto p-4 container" style="max-width: 720px;">
+		<div class="text-dark d-flex flex-column justify-content-center m-auto p-4 container">
 			<Header />
 
 			<div class="card bg-light m-2">
