--- a/src/layouts/ModPage.astro
+++ b/src/layouts/ModPage.astro
@@ -13,6 +13,8 @@ const { title } = Astro.props;
 
 <Layout title={title}>
 	<main>
+		<a href="/mods/">Back to Mods</a>
+
 		<Title title={title} />
 
         <slot />
