--- a/src/pages/mods.astro
+++ b/src/pages/mods.astro
@@ -11,7 +11,7 @@ import json from '../database.json';
 		<p>
 			{json.map(x => 
                 <div>
-                    <Title title={x.name} />
+                    <a href={"/mods/" + x.name.toLowerCase().replaceAll(" ", '')}><Title title={x.name} /></a>
                     <p><b>Author:</b> {x.repo.split("/")[0]}</p>
                     <p><b>Latest version:</b> {x.latest_version}</p>
                     <p><b>Download count:</b> {x.downloads}</p>
