--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -1,7 +1,7 @@
 $theme-colors: (
     "light":      #ffffff,
     "dark":       #000000,
-    "primary":    #8ff8ea,
+    "primary":    #e1faf7,
     "secondary":  #1f3049,
     "info":       #9057a9,
     "success":    #25a474,
