--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,7 @@
 ---
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
+import Navigation from '../components/Navigation.astro';
 import '/scss/custom.scss';
 
 import '@fortawesome/fontawesome-free/css/fontawesome.css';
@@ -46,11 +47,17 @@ const { title } = Astro.props;
 		img {
 			max-width: 100%;
 		}
+		a {
+			text-decoration: none;
+			color:cornflowerblue
+		}
 	</style>
-	<body class="bg-secondary d-flex flex-column min-vh-100">
+	<body class="d-flex flex-column min-vh-100 bg-secondary" style="background-image: url('/images/dredge.webp'); background-attachment: fixed;">
 
 		<div class="text-dark d-flex flex-column justify-content-center m-auto p-4 container">
 			<Header />
+
+			<Navigation />
 
 			<div class="card bg-light m-2">
 				<slot />
