--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -21,7 +21,7 @@ const { title } = Astro.props;
 		<meta charset="UTF-8" />
 		<meta name="description" content="Astro description">
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="icon" type="image/png" href="/favicon.png" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
@@ -51,8 +51,15 @@ const { title } = Astro.props;
 			text-decoration: none;
 			color:cornflowerblue
 		}
+		.dredge-bg {
+			background-image: url('/images/dredge.webp');
+			background-attachment: fixed;
+			background-position: center;
+			background-repeat: no-repeat;
+			background-size: cover;
+		}
 	</style>
-	<body class="d-flex flex-column min-vh-100 bg-secondary" style="background-image: url('/images/dredge.webp'); background-attachment: fixed;">
+	<body class="d-flex flex-column min-vh-100 bg-secondary dredge-bg">
 
 		<div class="text-dark d-flex flex-column justify-content-center m-auto p-4 container">
 			<Header />
