Link to Winch, change to dark theme

--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -1,12 +1,13 @@
 $theme-colors: (
     "light":      #ffffff,
     "dark":       #000000,
-    "primary":    #e1faf7,
+    "primary":    #b9f3ec,
     "secondary":  #1f3049,
     "info":       #9057a9,
     "success":    #25a474,
     "warning":    #d5d025,
     "danger":     #e04113,
+    "grey":       #181A1B
 );
 
 @import "node_modules/bootstrap/scss/bootstrap";
