--- a/src/components/Title.astro
+++ b/src/components/Title.astro
@@ -7,10 +7,10 @@ const { title: title } = Astro.props;
 ---
 
 <div class="d-flex flex-row items-center">
-    <hr class="flex-1 mb-4 flex-fill items-center border-dark border-solid">
+    <hr class="flex-1 mb-4 flex-fill items-center border border-light border-solid border-1">
     {title && 
         <h3 class="me-2 ms-2 text-center">{title}</h3>
     }
 
-    <hr class="flex-1 mb-4 flex-fill items-center border-dark">
+    <hr class="flex-1 mb-4 flex-fill items-center border border-light border-solid border-1">
 </div>
