--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -66,7 +66,7 @@ const { title } = Astro.props;
 
 			<Navigation />
 
-			<div class="card bg-light m-2">
+			<div class="card bg-grey text-light m-2">
 				<slot />
 			</div>
 
