--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -36,12 +36,35 @@ import json from '../database.json';
 
 		<br/>
 
+		<Title title="Winch Mod Loader" />
+
+		<div class="w-100 justify-content-center d-flex">
+			<div class="w-50">
+				<div class="d-flex">
+					<div class="w-75 d-flex align-items-center">
+						<img src="/public/favicon.png" class="w-100 ratio ratio-1x1"></img>
+					</div>
+
+					<div class="ms-4">
+						<p>All the mods available on the site are made possible thanks to the <a href="https://github.com/Hacktix/Winch">Winch mod loader</a> 
+						by <a href="https://github.com/Hacktix">Hacktix</a>.</p>
+
+						<p>If you're interested in creating mods yourself, check out the <a href=https://github.com/Hacktix/Winch/wiki>documentation</a> 
+						or try picking apart the <a href="https://github.com/Hacktix/Winch/tree/master/Winch.Examples">example mods</a>.</p>
+					</div>
+				</div>
+
+			</div>
+		</div>
+
+		<br/>
+
 		<Title title="Community" />
 
 		<div class="w-100 justify-content-center d-flex">
 			<div class="w-50">
 				<p>Join the DREDGE community modding Discord server for mod support, or if you want to talk about playing and creating mods.</p>
-				<BrandLink class="fa-discord" name="Modding Discord" url="https://discord.gg/qFqPuTUAmD" linkClass="link-dark" />
+				<BrandLink class="fa-discord" name="Modding Discord" url="https://discord.gg/qFqPuTUAmD" linkClass="link-light" />
 			</div>
 		</div>
 
