--- a/src/pages/mods.astro
+++ b/src/pages/mods.astro
@@ -20,7 +20,7 @@ import json from '../database.json';
                             <p><i>By {x.repo.split("/")[0]}, {x.downloads} downloads, version {x.latest_version}</i></p>   
                         </div>
                         <div>
-                            <BrandLink class="fa-github" name={x.name + " on GitHub"} url={"https://www.github.com/" + x.repo} linkClass="link-dark" />
+                            <BrandLink class="fa-github" name={x.name + " on GitHub"} url={"https://www.github.com/" + x.repo} linkClass="link-light" />
                         </div>
                     </div>
 
