--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,6 +1,6 @@
 <div class="wrapper flex-grow-1"></div>
 <footer>
-    <div class="d-flex justify-content-center text-primary bg-dark mt-4">
+    <div class="d-flex justify-content-center text-light bg-dark mt-4">
         <div class="row d-flex justify-content-center m-2 mt-4 p-2 pt-4">
             <p>The DREDGE modding website is unofficial and is not affiliated with Black Salt Games</p>
         </div>
