Add warning message + chromatic abberation

--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -5,7 +5,7 @@ $theme-colors: (
     "secondary":  #1f3049,
     "info":       #9057a9,
     "success":    #25a474,
-    "warning":    #d5d025,
+    "warning":    #ff7300,
     "danger":     #e04113,
     "grey":       #181A1B
 );
