--- a/src/components/Title.astro
+++ b/src/components/Title.astro
@@ -9,7 +9,7 @@ const { title: title } = Astro.props;
 <div class="d-flex flex-row items-center">
     <hr class="flex-1 mb-4 flex-fill items-center border border-light border-solid border-1">
     {title && 
-        <h3 class="me-2 ms-2 text-center">{title}</h3>
+        <h3 class="me-2 ms-2 text-center chromatic-abberation">{title}</h3>
     }
 
     <hr class="flex-1 mb-4 flex-fill items-center border border-light border-solid border-1">
