Fix missing image

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -42,7 +42,7 @@ import json from '../database.json';
 			<div class="w-50">
 				<div class="d-flex">
 					<div class="w-75 d-flex align-items-center">
-						<img src="/public/favicon.png" class="w-100 ratio ratio-1x1"></img>
+						<img src="/public/images/winch icon.png" class="w-100 ratio ratio-1x1"></img>
 					</div>
 
 					<div class="ms-4">
