--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,8 @@ import Layout from '../layouts/Layout.astro';
 import Title from '../components/Title.astro';
 import BrandLink from '../components/BrandLink.astro';
 import json from '../database.json';
+
+import winch_icon from '../images/winch icon.png';
 ---
 
 <Layout title="DREDGE Mods">
@@ -42,7 +44,7 @@ import json from '../database.json';
 			<div class="w-50">
 				<div class="d-flex">
 					<div class="w-75 d-flex align-items-center">
-						<img src="/public/images/winch icon.png" class="w-100 ratio ratio-1x1"></img>
+						<img src={winch_icon} class="w-100 ratio ratio-1x1"></img>
 					</div>
 
 					<div class="ms-4">
