--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import Title from '../components/Title.astro';
 import BrandLink from '../components/BrandLink.astro';
 import json from '../database.json';
 
-import winch_icon from '../images/winch icon.png';
+import winch_icon from '/images/winch icon.png';
 ---
 
 <Layout title="DREDGE Mods">
