--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,8 +3,6 @@ import Layout from '../layouts/Layout.astro';
 import Title from '../components/Title.astro';
 import BrandLink from '../components/BrandLink.astro';
 import json from '../database.json';
-
-import winch_icon from '/images/winch icon.png';
 ---
 
 <Layout title="DREDGE Mods">
@@ -43,8 +41,8 @@ import winch_icon from '/images/winch icon.png';
 		<div class="w-100 justify-content-center d-flex">
 			<div class="w-50">
 				<div class="d-flex">
-					<div class="w-75 d-flex align-items-center">
-						<img src={winch_icon} class="w-100 ratio ratio-1x1"></img>
+					<div class="d-flex align-items-center">
+						<img src="/images/winch icon.png" class="w-100 ratio ratio-1x1"></img>
 					</div>
 
 					<div class="ms-4">
