--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -58,10 +58,10 @@ const { title } = Astro.props;
 			background-repeat: no-repeat;
 			background-size: cover;
 		}
-		.chromatic-abberation {
+		.chromatic-aberration {
 			text-shadow: rgba(10, 189, 240, 0.298039) 2px 2px 0px, rgba(254, 1, 1, 0.298039) -2px -2px 0px;
 		}
-			a .chromatic-abberation {
+			a:not(.link-light) .chromatic-aberration {
 				text-shadow: none ! important;
 			}
 	</style>
