Use proper author line

--- a/src/layouts/ModPage.astro
+++ b/src/layouts/ModPage.astro
@@ -4,7 +4,7 @@ import Title from '../components/Title.astro';
 import BrandLink from '../components/BrandLink.astro';
 
 const { frontmatter } = Astro.props;
-const author = frontmatter.mod.repo.split("/")[0];
+const authorGithubLink = frontmatter.mod.repo.split("/")[0];
 ---
 
 <Layout title={frontmatter.title}>
@@ -13,7 +13,7 @@ const author = frontmatter.mod.repo.split("/")[0];
 		<div class="d-flex justify-content-center">
 			<div class="p-2 bg-secondary rounded w-75">
 				<div class="text-center">
-					<b>{frontmatter.mod.name} <i>by <a href={"https://www.github.com/" + author}>{author}</a></i></b>
+					<b>{frontmatter.mod.name} <i>by <a href={"https://www.github.com/" + authorGithubLink}>{frontmatter.mod.author}</a></i></b>
 				</div>
 	
 				<div class="p-2 d-flex justify-content-center">
