--- a/src/pages/mods.astro
+++ b/src/pages/mods.astro
@@ -17,7 +17,7 @@ import json from '../database.json';
                     <div class="d-flex flex-column justify-content-center text-center">
                         <div>
                             <p>{x.description}</p>
-                            <p><i>By {x.repo.split("/")[0]}, {x.downloads} downloads, version {x.latest_version}</i></p>   
+                            <p><i>By {x.author}, {x.downloads} downloads, version {x.latest_version}</i></p>   
                         </div>
                         <div>
                             <BrandLink class="fa-github" name={x.name + " on GitHub"} url={"https://www.github.com/" + x.repo} linkClass="link-light" />
