--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -49,7 +49,7 @@ const { title } = Astro.props;
 
 	</head>
 	<!-- Google tag (gtag.js) -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-7TZELGRMMZ"></script>
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-HDGQ98VFZT"></script>
 	<script>
 		// @ts-expect-error
 		window.dataLayer = window.dataLayer || [];
@@ -58,7 +58,7 @@ const { title } = Astro.props;
 		// @ts-expect-error
 		gtag('js', new Date());
 		// @ts-expect-error
-		gtag('config', 'G-7TZELGRMMZ');
+		gtag('config', 'G-HDGQ98VFZT');
 	</script>
 	<style is:global>
 		main {
