--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -29,6 +29,7 @@ const { title } = Astro.props;
 		<meta property="og:url" content="https://dredgemods.com/">
 		<meta property="og:type" content="website">
 		<meta property="og:site_name" content="DREDGE Mods">
+		<meta property="og:title" content="DREDGE Mods">
 		<meta property="og:description" content="Download and install mods using the DREDGE Mod Manager or learn to create your own DREDGE mods.">
 		<meta property="og:image" content="https://dredgemods.com/images/opengraph.webp">
 		<meta property="og:image:width" content="1200px">
