Add manager and database instructions

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -60,6 +60,17 @@ import json from '../database.json';
 					<li>Enable or disable mods</li>
 					<li>Launch the game directly with your enabled mods</li>
 				</ul>
+
+				To use the manager:
+				<ul>
+					<li>Download the correct version from the link above. If you're on windows this will likely be "Dredge.Mod.Manager_#.#.#_x64-setup.exe".</li>
+					<li>Run the installer. If on Windows, Microsoft Defender will stop you from running it. Click "more info" and "run anyway".</li>
+					<li>Click through the installer as normal.</li>
+				</ul>
+
+				<b>Note:</b> You must install Winch from the Available mods list to have any mods take work. To get rid of all mods, uninstall all of them including Winch
+				 and then verify your game files in 
+				whatever platform you installed the game with.
 			</div>
 		</div>
 
@@ -80,6 +91,11 @@ import json from '../database.json';
 
 						<p>If you're interested in creating mods yourself, check out the <a href=https://github.com/Hacktix/Winch/wiki>documentation</a> 
 						or try picking apart the <a href="https://github.com/Hacktix/Winch/tree/master/Winch.Examples">example mods</a>.</p>
+
+						<p>If you have already created a mod and want to add it to the database, click 
+							<a href="https://github.com/xen-42/DredgeModDatabase/issues/new?assignees=&labels=add-new-mod&projects=&template=add-new-mod.yml&title=%5BYour+mod+name+here%5D">
+								here</a>.
+						</p>
 					</div>
 				</div>
 
