--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,10 +1,12 @@
 <div class="d-flex justify-content-center text-white pb-2">
-    <a href="/" class="link-light d-flex justify-content-center text-decoration-none">
-        <div class="d-flex flex-column justify-content-center pe-2 text-center">
+
+    <div class="d-flex flex-column justify-content-center pe-2 text-center">
+        <a href="/" class="link-light d-flex justify-content-center text-decoration-none">
             <h2 class="chromatic-aberration">DREDGE Mods</h2>
-            <p class="bg-warning text-dark p-1 ps-4 pe-4 m-2 rounded">
-                The DREDGE modding infrastructure is currently under construction - some elements might not work as intended
-            </p>
-        </div>
-    </a>
+        </a>
+        <p class="bg-warning text-dark p-1 ps-4 pe-4 m-2 rounded">
+            The DREDGE modding infrastructure is quite new - if anything breaks let us know in the <u><a href="https://discord.gg/qFqPuTUAmD" class="link-dark">Discord server</a></u>
+        </p>
+    </div>
+
 </div>
