--- a/src/layouts/ModPage.astro
+++ b/src/layouts/ModPage.astro
@@ -11,7 +11,7 @@ const authorGithubLink = frontmatter.mod.repo.split("/")[0];
 	<main>
 		<br/>
 		<div class="d-flex justify-content-center">
-			<div class="p-2 bg-secondary rounded w-75">
+			<div class="p-2 bg-secondary rounded w-md-75">
 				<div class="text-center">
 					<b>{frontmatter.mod.name} <i>by <a href={"https://www.github.com/" + authorGithubLink}>{frontmatter.mod.author}</a></i></b>
 				</div>
