Mod cards, some more mobile adjustments

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,8 +4,8 @@
         <a href="/" class="link-light d-flex justify-content-center text-decoration-none">
             <h2 class="chromatic-aberration">DREDGE Mods</h2>
         </a>
-        <p class="bg-warning text-dark p-1 ps-4 pe-4 m-2 rounded">
-            The DREDGE modding infrastructure is quite new - if anything breaks let us know in the <u><a href="https://discord.gg/qFqPuTUAmD" class="link-dark">Discord server</a></u>
+        <p class="bg-warning text-dark p-1 ps-4 pe-4 m-2 rounded text-white">
+            The DREDGE modding infrastructure is quite new - if anything breaks let us know in the <u><a href="https://discord.gg/qFqPuTUAmD" class="link-light">Discord server</a></u>
         </p>
     </div>
 
