--- a/src/pages/mods.astro
+++ b/src/pages/mods.astro
@@ -7,19 +7,20 @@ import json from '../database.json';
 
 <Layout title="DREDGE Mods">
 	<main>
+        <Title title="Available Mods" />
         <p>There are {json.length} mods available.</p>
 
-		<div>
+		<div class="d-flex flex-column align-items-center w-100">
 			{json.sort().map(x => 
-                <div>
-                    <a href={"/mods/" + x.name.toLowerCase().trim().split(" ").join("_")}><Title title={x.name} /></a>
+                <div class="card bg-secondary mb-4 w-md-75">
+                    <a href={"/mods/" + x.name.toLowerCase().trim().split(" ").join("_")}><h2 class="text-center">{x.name}</h2></a>
 
                     <div class="d-flex flex-column justify-content-center text-center">
                         <div>
-                            <p>{x.description}</p>
-                            <p><i>By {x.author}, {x.downloads} downloads, version {x.latest_version}</i></p>   
+                            <p>{x.description}</p> 
                         </div>
-                        <div>
+                        <div class="opacity-50">
+                            <p><i>By {x.author} • {x.downloads} downloads • version {x.latest_version}</i></p>  
                             <BrandLink class="fa-github" name={x.name + " on GitHub"} url={"https://www.github.com/" + x.repo} linkClass="link-light" />
                         </div>
                     </div>
