--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -7,7 +7,8 @@ $theme-colors: (
     "success":    #25a474,
     "warning":    #ff7300,
     "danger":     #e04113,
-    "grey":       #181A1B
+    "grey":       #181A1B,
+    "grey2":      #14191b,      
 );
 
 @import "node_modules/bootstrap/scss/bootstrap";
@@ -16,18 +17,37 @@ $theme-colors: (
     width: 100%;
 }
 
-@include media-breakpoint-up(md) {
-    .w-md-50 {
-        width: 50%;
-    }
-}
-
 .w-md-75 {
     width: 100%;
 }
 
 @include media-breakpoint-up(md) {
+    .w-md-50 {
+        width: 50%;
+    }
+
     .w-md-75 {
         width: 75%;
+    }
+}
+
+main {
+    margin: auto;
+    padding: 1.5rem;
+    max-width: 90%;
+    min-width: 90%;
+    width: 90%;
+}
+
+@include media-breakpoint-down(md) {
+    main {
+        padding: 0.5rem;
+        width: 100%;
+        max-width: 100%;
+        min-width: 100%;
+    }
+
+    .container {
+        padding: 0rem ! important;
     }
 }
