--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -62,12 +62,6 @@ const { title } = Astro.props;
 		gtag('config', 'G-HDGQ98VFZT');
 	</script>
 	<style is:global>
-		main {
-			margin: auto;
-			padding: 1.5rem;
-			max-width: 90%;
-			min-width: 90%;
-		}
 		h1 {
 			font-size: 3rem;
 			font-weight: 800;
@@ -103,12 +97,12 @@ const { title } = Astro.props;
 	</style>
 	<body class="d-flex flex-column min-vh-100 bg-secondary dredge-bg">
 
-		<div class="text-dark d-flex flex-column justify-content-center m-auto p-4 container">
+		<div class="text-dark d-flex flex-column justify-content-center m-auto container">
 			<Header />
 
 			<Navigation />
 
-			<div class="card bg-grey text-light m-2">
+			<div class="card bg-grey text-light mt-2">
 				<slot />
 			</div>
 
